<resources>
    <string name="app_name">Simple Running</string>
    <string name="preference_key" translatable="false">run_shared_pref</string>
    <string name="login_new_account"><u>New here? Sign up</u></string>
    <string name="fragment_new_account_return"><u>Return</u></string>
    <string name="about_dialog">Run Simple Version %1$s \n\nYour own running tracker.
        Easily manage your activities and observe trends over time.
        \n\n Developed by Tobias Pristupin
        \n\nThis app is open source and licensed under the MIT License.
        \n\nYou can check out the code over at:\nhttps://github.com/TobiPristupin/RUN
        \n\nFeel free to contribute and submit issues :)</string>
    <string name="activity_editor_distance">Distance</string>
    <string name="editor_activity_view_empty_field" translatable="false">N/A</string>
    <string name="activity_editor_time">Time</string>
    <string name="activity_editor_date">Date</string>
    <string name="activity_editor_rating">Rating</string>
    <string name="activity_settings_general">General</string>
    <string name="activity_settings_title">Settings</string>
    <string name="activity_settings_distanceunit">Distance Unit</string>
    <string name="activity_settings_account">Account</string>
    <string name="activity_settings_signout">Sign Out</string>
    <string name="activity_settings_logout_description">Log out from your account</string>
    <string name="activity_settings_other">Other</string>
    <string name="activity_settings_helpfeedback">Help and Feedback</string>
    <string name="activity_settings_help">Help, feature requests and bug reports</string>
    <string name="activity_settings_opensourcelibraries">Open Source Libraries</string>
    <string name="activity_settings_fosslibraries">FOSS Libraries used in development</string>
    <string name="activity_settings_about">About</string>
    <string name="activity_settings_aboutdeveloper">About the developer</string>
    <string name="all_run" translatable="false">RUN</string>
    <string name="fragment_forgot_resetlink">Enter your email, and we\'ll send you a reset link</string>
    <string name="activity_settings_email" translatable="false">Email</string>
    <string name="activity_settings_send">SEND</string>
    <string name="fragment_history_empty">Oh dear! it\'s empty!</string>
    <string name="fragment_login_forgot"><u>Forgot password?</u></string>
    <string name="activity_settings_emailhint" translatable="false">Email</string>
    <string name="fragment_new_account_emailhint" translatable="false">Email</string>
    <string name="fragment_new_account_passwordhint">Password</string>
    <string name="fragment_new_account_repeatpassword">Repeat Password</string>
    <string name="fragment_new_account_createaccount">Create Account</string>
    <string name="fragment_new_account_or">OR</string>
    <string name="fragment_stats_frequency">Activity Frequency</string>
    <string name="fragment_stats_activities_distribution">Distribution</string>
    <string name="fragment_stats_mileage_mileage">Mileage</string>
    <string name="fragment_stats_mileage_overview">Overview</string>
    <string name="fragment_stats_pr_best_performances">Best Performances</string>
    <string name="fragment_stats_pr_personalbests">Records</string>
    <string name="library_list_item_website">Website</string>
    <string name="navview_menu_history">History</string>
    <string name="navview_menu_analyze">Analyze</string>
    <string name="navview_menu_other">Other</string>
    <string name="navview_menu_settings">Settings</string>
    <string name="navview_menu_about">About</string>
    <string name="navview_menu_open_source_libraries">Open Source Libraries</string>
    <string name="navview_menu_rate_us">Rate Us</string>
    <string name="time_dialog_minutes">m</string>
    <string name="time_dialog_hours">h</string>
    <string name="time_dialog_seconds">s</string>
    <string name="distance_dialog_distance">Distance</string>
    <string name="distance_dialog_cancel">Cancel</string>
    <string name="distance_dialog_done">Done</string>
    <string name="distance_unit_dialog_distanceunit">Distance Unit</string>
    <string name="all_metric">Metric</string>
    <string name="all_imperial">Imperial</string>
    <string name="editor_activityview_added">Successfully Added</string>
    <string name="editor_activityview_fillin">Fill in all the fields</string>
    <string name="forgot_password_fragment_view_recoverytoast">Recovery email sent</string>
    <string name="forgot_password_fragment_view_recovery_failedtoast">Email not sent. Please check your internet connection or try again</string>
    <string name="forgot_password_fragment_view_toomanyrequests_toast">Too many requests sent. Please try again later</string>
    <string name="login_activity_unabletoconnect_toast">Unable to connect to Google. Check your internet connection</string>
    <string name="all_history">History</string>
    <string name="history_fragment_view_dialog_title">Delete</string>
    <string name="history_fragment_view_cancel">Cancel</string>
    <string name="history_fragment_view_yes">Yes</string>
    <string name="login_fragment_view_errortoast">An error has occurred. Please try again</string>
    <string name="login_fragment_view_google_toast">Google authentication failed. Check your internet connection and try again</string>
    <string name="main_activity_view_dialog_title">About</string>
    <string name="new_account_fragment_view_account_error_toast">Unable to create new account</string>
    <string name="new_account_fragment_view_password_toast">Password is not strong enough</string>
    <string name="new_account_fragment_view_collision_toast">User with same email already exists</string>
    <string name="new_account_fragment_view_auth_failed_toast">Google authentication failed. Check your internet connection or try again</string>
    <string name="editor_activity_view_toolbar_edit">Edit Run</string>
    <string name="rating_dialog_title">Rating</string>
    <string name="rating_dialog_negative_button">Cancel</string>
    <string name="rating_dialog_positive_button">Done</string>
    <string name="time_dialog_title">Time</string>
    <string name="time_dialog_negative_button">Cancel</string>
    <string name="time_dialog_positive_button">Done</string>
    <string name="all_invalid_email">Invalid Email</string>
    <string name="all_required_field">Required Field</string>
    <string name="all_short_password">Password must be longer than 6 characters</string>
    <string name="all_invalid_credentials">Invalid credentials</string>
    <string name="all_error">Error occurred. Please try again</string>
    <string name="all_passwords_dont_match">Passwords don\'t match</string>
    <string name="settings_activity_view_signoutdialog_title">Are you sure you want to log out?</string>
    <string name="settings_activity_view_signoutdialog_positive">Yes</string>
    <string name="settings_activity_view_signoutdialog_negative">No</string>
    <string name="aboutdialog_title">About</string>
    <string name="settings_activity_view_noemailerror_toast">No valid email app found, message could not be sent</string>
    <string name="settings_activity_view_email_subject">Help and Feedback</string>
    <string name="settings_acttivity_view_email_bodyversion">Version:</string>
    <string name="settings_acttivity_view_email_body_desc">If submitting a bug report, please add device model and Android version.</string>
    <string name="all_week">Week</string>
    <string name="all_month">Month</string>
    <string name="all_3months">3 Months</string>
    <string name="all_6months">6 Months</string>
    <string name="all_year">Year</string>
    <string name="all_empty_dataset">Oh no! It\'s empty!</string>
    <string name="stats_fragment_activities_view_piechart_label">Distribution</string>
    <string name="stats_fragment_activities_view_barchart_label">Activities</string>
    <string name="stats_fragment_mileage_view_thismonth">This month</string>
    <string name="stats_fragment_mileage_view_lastmonth">Over last month</string>
    <string name="stats_fragment_mileage_view_this3months">This 3 months</string>
    <string name="stats_fragment_mileage_view_last3months">Over last 3 months</string>
    <string name="stats_fragment_mileage_view_this6months">This 6 months</string>
    <string name="stats_fragment_mileage_view_last6months">Over last 6 months</string>
    <string name="stats_fragment_mileage_view_thisyear">This year</string>
    <string name="stats_fragment_mileage_view_lastyear">Over last year</string>
    <string name="stats_fragment_prs_view_400m">400m</string>
    <string name="stats_fragment_prs_view_mile">Mile</string>
    <string name="stats_fragment_prs_view_5k" translatable="false">5k</string>
    <string name="stats_fragment_prs_view_10k" translatable="false">10k</string>
    <string name="stats_fragment_prs_view_21k" translatable="false">21k</string>
    <string name="stats_fragment_prs_view_42k" translatable="false">42k</string>
    <string name="stats_fragment_prs_view_farthest">Farthest Distance</string>
    <string name="stats_fragment_prs_view_fastest">Fastest Avg Pace</string>
    <string name="stats_fragment_prs_view_longest">Longest Duration</string>
    <string name="stats_fragment_prs_view_time">Time</string>
    <string name="stats_fragment_prs_view_besttime">Best Time</string>
    <string name="stats_fragment_prs_view_average">Average Time</string>
    <string name="stats_analyze">Analyze</string>
    <string name="stats_fragment_view_mileage">Mileage</string>
    <string name="stats_fragment_view_prs">PR\'s</string>
    <string name="stats_fragment_view_activities">Activities</string>
    <string name="all_monday">Monday</string>
    <string name="all_tuesday">Tuesday</string>
    <string name="all_wednesday">Wednesday</string>
    <string name="all_thursday">Thursday</string>
    <string name="all_friday">Friday</string>
    <string name="all_saturday">Saturday</string>
    <string name="all_sunday">Sunday</string>
    <string name="all_all">All</string>
    <string name="stats_fragment_mileage_view_distance">Distance</string>
    <string name="editor_activity_view_title">Add Manual Entry</string>
    <string name="activity_library_title">Open Source Libraries</string>
    <string name="forgot_password_return"><u>Return</u></string>
    <string name="all_username_doesnt_exist">Username doesn\'t exist</string>
    <string name="settings_activity_license">License</string>
    <string name="settings_activity_license_and_credits">License and credits</string>
</resources>